# bdm-osbdm

./: Makefile  README
doc/: Makefile  gdb-bdm.texinfo
gdb/patches/: gdb-4.18-bdm-m68k.patch  gdb-4.18-m68k.patch  gdb-5.0-bdm-m68k.patch  gdb-5.0-m68k.patch  gdb-5.2.1-bdm-m68k.patch  gdb-5.2.1-m68k.patch  gdb-5.3-bdm-m68k.patch  gdb-5.3-m68k.patch  gdb-5.3.0-m68k.patch  gdb-5.3.92-bdm-m68k.patch  gdb-6.0-bdm-m68k.patch  gdb-6.1-bdm-m68k.patch  gdb-6.3-bdm-m68k.patch  insight-5.0.patch  insight-5.2.1.patch  insight-5.3.92.patch  insight-5.3.patch
gdb/scripts/: 5206.gdb  Makefile  RTEMS360.gdb  RTEMS5206.gdb  SAL68360.gdb  m68k-rtems-gdb  showCPU32Exception.gdb
m683xx/: README  README-5.3-bdm-683xx  gdb-5.2.1-bdm-patches-pi1.lsm  gdb-5.2.1-bdm.patch-1  gdb-5.3-bdm-683xx-patch  insight-5.3-bdm-683xx-patch
m683xx/bdm-driver/: MAKEDEV  Makefile  README  bdm.c  bdm.h  bdmlib.h  conf.modules  k_compat.h
m683xx/bdm-load/: Makefile  README  bdm-load.c  bdm-load.lsm  bdm.h  bdm_test.c  bdmflash.c  bdmflash.h  bdmlib.c  bdmlib.h  cpu32init  tpudb.c  tpudis.c
m683xx/scripts/: profi360.gdb  run332.gdb  run376.gdb
m68k/: .cvsignore  .gitignore  BUGS  ChangeLog  Makefile.am  Makefile.in  README  README.bdmgdbserver  README.cvs  README.insight  configure  configure.ac
m68k/bdmabstraction/: .cvsignore  BDMDriver.h  BDMFlash.c  BDMFlash.h  BDMTargetAddress.c  BDMTargetAddress.h  Debug.h  Flash.c  Flash.h  Makefile.am  bdmcf.h  bdmops.c  bdmops.h
m68k/config/: .gitignore  ax_cflags_warn_all.m4  bootstrap
m68k/driver/: ChangeLog  bdm-cf-pe.c  bdm-cpu32.c  bdm-tblcf.c  bdm-user-land.c  bdm.c  bdm.h
m68k/driver/freebsd/: .gitignore  ChangeLog  Makefile  README  bdm  bdm.8  freebsd-bdm.c  unbdm
m68k/driver/ioperm/: ioperm.c
m68k/driver/linux/: ChangeLog  Makefile  linux-bdm.c
m68k/driver/linux-2.5/: bdm.c
m68k/driver/linux-2.6/: .cvsignore  Makefile  bdm.c
m68k/driver/openbsd/: Makefile  README  bdm-install.sh  openbsd-bdm.c
m68k/driver/sco/: Makefile  Master  Node  README  Space.c  System  sco.c
m68k/driver/win/: ChangeLog  win-bdm.c  win-io.h
m68k/flashlib/: .gitignore  Makefile.am  Makefile.in  PLUGIN-MAPPING  README  bdmfilt.c  bdmfilt.h  bdmflash.c  bdmflash.h  compile_flashcfm  elf-utils.c  elf-utils.h  flash29.c  flash29.h  flash_filter.c  flash_filter.h  flashcfm.c  flashcfm.h  flashintelc3.c  flashintelc3.h  flashintelp30.c  flashintelp30.h  m68k-bdm-compile-plugin  tcompile
m68k/gdbserver/: Makefile.am  m68k-bdm-low.c  m68k-bdm-low.h  m68k-cf5200-regs.c  m68k-cf5200.xml  m68k-cf52223-regs.c  m68k-cf52223.xml  m68k-cf5235-regs.c  m68k-cf5235.xml  m68k-cf5272-regs.c  m68k-cf5272.xml  m68k-cf5282-regs.c  m68k-cf5282.xml  m68k-cf5307-regs.c  m68k-cf5307.xml  m68k-cfv1-regs.c  m68k-cfv1.xml  m68k-cfv4e-regs.c  m68k-cfv4e.xml  m68k-core-regs.c  m68k-core.xml  m68k-cpu32-regs.c  m68k-cpu32.xml  m68k-cpu32plus-regs.c  m68k-cpu32plus.xml  m68k-fpu.xml  regcache.c  regcache.h  regdef.h  remote-utils.c  server.c  server.h  target.h  utils.c
m68k/lib/: .cvsignore  .gitignore  BDMlib.h  ChangeLog  Makefile  Makefile.am  Makefile.in  bdm-iface.h  bdmBFD.c  bdmIO.c  bdmRemote.c  bdmRemote.h  bfd.h  ioperm.c  ioperm.h  localIface.c  localIface.h  win-ioperm.c
m68k/libbdmusb/: Makefile.am  bdm-usb.c  bdm-usb.h  bdm_types.h  bdmusb-hwdesc.h  bdmusb.c  bdmusb.h  bdmusb_bt.c  bdmusb_low_level.c  bdmusb_low_level.h  bdmusb_unsec.c  commands.h  log.h  srec.c
m68k/libbdmusb/tblcf/: .gitignore  Makefile.am  bdm-usb.h  log_cmdline.c  tblcf-show.c  tblcf.c  tblcf.h  tblcf_bt.c  tblcf_hwdesc.h  tblcf_unsec.c  tblcf_usb.c  tblcf_usb.h  version.h
m68k/libbdmusb/usbdm/: usbdm.c  usbdm.h
m68k/libelf/: ChangeLog  MANIFEST  Makefile.in  acconfig.h  aclocal.m4  configure.in
m68k/libelf/lib/: 32.fsize.c  32.getehdr.c  32.getphdr.c  32.getshdr.c  32.newehdr.c  32.newphdr.c  32.xlatetof.c  64.xlatetof.c  Makefile.in  Makefile.w32  assert.c  begin.c  build.bat  byteswap.h  checksum.c  cntl.c  config.h.w32  cook.c  elf_repl.h  end.c  errmsg.c  errno.c  errors.h  ext_types.h  fill.c  flag.c  gelf.h  gelfehdr.c  gelfphdr.c  gelfshdr.c  gelftrans.c  getarhdr.c  getarsym.c  getbase.c  getdata.c  getident.c  getscn.c  hash.c  input.c  kind.c  (+29 more)
m68k/libelf/po/: Makefile.in  de.po  gmo2msg.c
m68k/local_scripts/: MAKEDEV  README  build-it  makegdb68kbdm  rtsetup
m68k/server/: .cvsignore  ChangeLog  Makefile  Makefile.am  Makefile.in  bdmServer.c  xmalloc.c
m68k/tblcf/: Makefile.am  bdm-usb.c  commands.h  log.c  log.h  log_cmdline.h  srec.c  srec.h  tblcf.c  tblcf.h  tblcf_bt.h  tblcf_hwdesc.h  tblcf_usb.c  tblcf_usb.h
m68k/test/: .cvsignore  .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.cpu32-check  chk.c  coldfire-trace  cpu32-check.c  cpu32-memtest.list  sram-test.S
m68k/utils/: .cvsignore  .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  README.bdmctrl  bdmctrl.c  bdmflash.c  bdmmon.l  bdmreset.c  bdmusb-show.c  m68332.test  mcf52235.test  mcf5235.test  mcf5329.test  usb-show.c
schematics/coldfire/: README
schematics/cpu32/eficd/: eficdbdm.pld  icd.pld
schematics/cpu32/icd32/: bdm_icd1.eps  icd-bdm2.jed  icd.jed  icd.opl
tools/bdm_abstraction/: BDMDriver.h  BDMFlash.c  BDMFlash.h  BDMTargetAddress.c  BDMTargetAddress.h  Debug.h  Flash.c  Flash.h  Makefile  bdmcf.h  bdmops.c
tools/bdm_mon/: .gdbinit  BDMFlash.c  Makefile  bdm_mon.lex
